Added two projects

--- a/index.html
+++ b/index.html
@@ -355,6 +355,60 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
               View Project →
             </a>
           </article>
+          <!-- Project Card 4 -->
+          <article class="card-hover rounded-3xl p-6 shadow-lg border-2 animate-fade-in stagger-3 opacity-0"
+            style="background: white; border-color: #c4b5fd">
+            <div class="w-full h-40 rounded-2xl mb-4 flex items-center justify-center text-5xl">
+              <img src="
+          https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/589/original/RIABB.png?1771688724"
+                style="border-radius: 10px" />
+            </div>
+          
+            <span class="inline-block px-3 py-1 rounded-full text-xs font-bold mb-3"
+              style="background: #fecdd3; color: #9f1239">Responsive</span>
+            <h3 class="font-bold text-lg mb-2" style="color: #9f1239">
+              Romance is a Bonus Book
+            </h3>
+            <p class="text-sm mb-4" style="color: #be185d">
+              A fun website I created to showcase one of my favorite TV shows.
+            </p>
+            <a href="https://bonusbook.netlify.app/" target="_blank" rel="noopener noreferrer"
+              class="inline-flex items-center gap-2 font-semibold text-sm transition-colors" style="color: #db2777"
+              onmouseover="this.style.color = '#be185d'" onmouseout="this.style.color = '#db2777'">
+              View Project →
+            </a>
+          </article>
+          <!-- Project Card 5 -->
+          <article class="card-hover rounded-3xl p-6 shadow-lg border-2 animate-fade-in stagger-3 opacity-0"
+            style="background: white; border-color: #fecdd3">
+            <div class="w-full h-40 rounded-2xl mb-4 flex items-center justify-center text-5xl">
+              <img src="
+                    https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/590/original/weather.png?1771688949"
+                style="border-radius: 10px" />
+            </div>
+          
+            <span
+              class="inline-block px-3 py-1 rounded-full text-xs font-bold mb-3"
+              style="background: #c4b5fd; color: #5b21b6"
+              >API</span
+            >
+            <span
+              class="inline-block px-3 py-1 rounded-full text-xs font-bold mb-3"
+              style="background: #fef08a; color: #aa9115"
+              >JavaScript</span
+            >
+            <h3 class="font-bold text-lg mb-2" style="color: #9f1239">
+              Weather App
+            </h3>
+            <p class="text-sm mb-4" style="color: #be185d">
+              A responsive weather app that displays current conditions and forecasts.
+            </p>
+            <a href="https://spectacular-banoffee-11e748.netlify.app/" target="_blank" rel="noopener noreferrer"
+              class="inline-flex items-center gap-2 font-semibold text-sm transition-colors" style="color: #db2777"
+              onmouseover="this.style.color = '#be185d'" onmouseout="this.style.color = '#db2777'">
+              View Project →
+            </a>
+          </article>
         </div>
       </section>
       <!-- Resources Section -->
