Change PDF to Link.

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
               Resources
             </h2>
             <p class="font-accent text-xl" style="color: #f472b6">
-              Free goodies for fellow creators & Resources for possible partnerships
+              Free goodies for fellow creators & resources for possible partnerships!
             </p>
           </div>
           <div class="grid md:grid-cols-2 gap-6">
@@ -463,11 +463,11 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   Check out my resume and please feel free to reach out to me
                   regarding work opportunities or for making connections!
                 </p>
-                <a href="" download="brooklyn.vanbebber.pdf" target="_blank" rel="noopener noreferrer"><button
+                <a href="https://www.linkedin.com/in/brooklyn-van-bebber/" target="_blank" rel="noopener noreferrer"><button
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #fecdd3; color: #9f1239"
                 >
-                  Download ↓
+                  View LinkedIn Profile →
                 </button></a>
               </div>
             </article>
