--- a/index.html
+++ b/index.html
@@ -451,11 +451,8 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                 📝
               </div>
               <div>
-                <span
-                  class="inline-block px-2 py-1 rounded-full text-xs font-bold mb-2"
-                  style="background: #fef08a; color: #854d0e"
-                  >PDF</span
-                >
+                <span class="inline-block px-2 py-1 rounded-full text-xs font-bold mb-2"
+                  style="background: #c4b5fd; color: #5b21b6">Link</span>
                 <h3 class="font-bold text-lg mb-1" style="color: #9f1239">
                   My Resume
                 </h3>
